k8s/mtls/enable-strict-mtls.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: default
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: cineapi-mtls
  namespace: default
spec:
  selector:
    matchLabels:
      app: cineapi
  mtls:
    mode: STRICT
